--- a/20210215_ビットコインチャート.ipynb
+++ b/20210215_ビットコインチャート.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "20210215_ビットコインチャート.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMVOMwUAYlSzN3P61tzeaKm",
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOqYO8ccQV1hpXkSvJRbACx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +32,305 @@
         "id": "BQ7egwnUyaGR"
       },
       "source": [
-        ""
+        "import requests\n",
+        "import json\n",
+        "import pandas as pd\n",
+        "from plotly.graph_objs import *\n",
+        "# !pip install plotly==3.10.0\n",
+        "import plotly.plotly as py"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "pbGasyAYy0K0",
+        "outputId": "8b38415f-207d-45ae-dcdb-d1b59a2831b7"
+      },
+      "source": [
+        "res = requests.get('https://api.cryptowat.ch/markets/bitflyer/btcjpy/ohlc')\n",
+        "data = json.loads(res.text)\n",
+        "daily_data = pd.DataFrame(data['result']['86400'], columns=['close_time', 'open_price', 'high_price', 'low_price', 'close_price', 'volume', 'quote_volume'])\n",
+        "daily_data.head()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>close_time</th>\n",
+              "      <th>open_price</th>\n",
+              "      <th>high_price</th>\n",
+              "      <th>low_price</th>\n",
+              "      <th>close_price</th>\n",
+              "      <th>volume</th>\n",
+              "      <th>quote_volume</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1435276800</td>\n",
+              "      <td>29020</td>\n",
+              "      <td>32000</td>\n",
+              "      <td>29020</td>\n",
+              "      <td>32000</td>\n",
+              "      <td>0.033</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1435363200</td>\n",
+              "      <td>32000</td>\n",
+              "      <td>31700</td>\n",
+              "      <td>31700</td>\n",
+              "      <td>31700</td>\n",
+              "      <td>0.001</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1435449600</td>\n",
+              "      <td>31700</td>\n",
+              "      <td>31704</td>\n",
+              "      <td>30550</td>\n",
+              "      <td>31000</td>\n",
+              "      <td>2.739</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1435536000</td>\n",
+              "      <td>31000</td>\n",
+              "      <td>31220</td>\n",
+              "      <td>30870</td>\n",
+              "      <td>30870</td>\n",
+              "      <td>1.280</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1435622400</td>\n",
+              "      <td>30870</td>\n",
+              "      <td>31550</td>\n",
+              "      <td>30900</td>\n",
+              "      <td>31550</td>\n",
+              "      <td>0.990</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   close_time  open_price  high_price  ...  close_price  volume  quote_volume\n",
+              "0  1435276800       29020       32000  ...        32000   0.033           0.0\n",
+              "1  1435363200       32000       31700  ...        31700   0.001           0.0\n",
+              "2  1435449600       31700       31704  ...        31000   2.739           0.0\n",
+              "3  1435536000       31000       31220  ...        30870   1.280           0.0\n",
+              "4  1435622400       30870       31550  ...        31550   0.990           0.0\n",
+              "\n",
+              "[5 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "nOvJQ5hnzamu",
+        "outputId": "856132eb-f561-4188-cf23-1069158e1187"
+      },
+      "source": [
+        "daily_data['date'] = pd.to_datetime(daily_data['close_time'], unit='s')\n",
+        "daily_data.head()"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>close_time</th>\n",
+              "      <th>open_price</th>\n",
+              "      <th>high_price</th>\n",
+              "      <th>low_price</th>\n",
+              "      <th>close_price</th>\n",
+              "      <th>volume</th>\n",
+              "      <th>quote_volume</th>\n",
+              "      <th>date</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1435276800</td>\n",
+              "      <td>29020</td>\n",
+              "      <td>32000</td>\n",
+              "      <td>29020</td>\n",
+              "      <td>32000</td>\n",
+              "      <td>0.033</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2015-06-26</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1435363200</td>\n",
+              "      <td>32000</td>\n",
+              "      <td>31700</td>\n",
+              "      <td>31700</td>\n",
+              "      <td>31700</td>\n",
+              "      <td>0.001</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2015-06-27</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1435449600</td>\n",
+              "      <td>31700</td>\n",
+              "      <td>31704</td>\n",
+              "      <td>30550</td>\n",
+              "      <td>31000</td>\n",
+              "      <td>2.739</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2015-06-28</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1435536000</td>\n",
+              "      <td>31000</td>\n",
+              "      <td>31220</td>\n",
+              "      <td>30870</td>\n",
+              "      <td>30870</td>\n",
+              "      <td>1.280</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2015-06-29</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1435622400</td>\n",
+              "      <td>30870</td>\n",
+              "      <td>31550</td>\n",
+              "      <td>30900</td>\n",
+              "      <td>31550</td>\n",
+              "      <td>0.990</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2015-06-30</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   close_time  open_price  high_price  ...  volume  quote_volume       date\n",
+              "0  1435276800       29020       32000  ...   0.033           0.0 2015-06-26\n",
+              "1  1435363200       32000       31700  ...   0.001           0.0 2015-06-27\n",
+              "2  1435449600       31700       31704  ...   2.739           0.0 2015-06-28\n",
+              "3  1435536000       31000       31220  ...   1.280           0.0 2015-06-29\n",
+              "4  1435622400       30870       31550  ...   0.990           0.0 2015-06-30\n",
+              "\n",
+              "[5 rows x 8 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 345
+        },
+        "id": "jhhnbQdGzldd",
+        "outputId": "483fe219-2220-4dae-80aa-b6e43f4111b6"
+      },
+      "source": [
+        "trace1 = {\n",
+        "    'type': 'candlestick',\n",
+        "    'x': daily_data['date'],\n",
+        "    'yaxis': 'y2',\n",
+        "    'low': daily_data['low_price'],\n",
+        "    'high': daily_data['high_price'],\n",
+        "    'open': daily_data['open_price'],\n",
+        "    'close': daily_data['close_price'],\n",
+        "}\n",
+        "fig = Figure(data=[trace1])\n",
+        "fig.show()"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-26-2e3c39ded2a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;34m'close'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdaily_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'close_price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m }\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrace1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/plotly/graph_objs/_figure.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, layout, frames, skip_invalid, **kwargs)\u001b[0m\n\u001b[1;32m    606\u001b[0m             \u001b[0mconstancy\u001b[0m \u001b[0mof\u001b[0m \u001b[0mdata\u001b[0m \u001b[0mpoints\u001b[0m \u001b[0mduring\u001b[0m \u001b[0manimation\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mShould\u001b[0m \u001b[0mbe\u001b[0m \u001b[0man\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    607\u001b[0m             \u001b[0marray\u001b[0m \u001b[0mof\u001b[0m \u001b[0mstrings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnumbers\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0many\u001b[0m \u001b[0mother\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 608\u001b[0;31m         \u001b[0midssrc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    609\u001b[0m             \u001b[0mSets\u001b[0m \u001b[0mthe\u001b[0m \u001b[0msource\u001b[0m \u001b[0mreference\u001b[0m \u001b[0mon\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mly\u001b[0m \u001b[0;32mfor\u001b[0m  \u001b[0mids\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    610\u001b[0m         \u001b[0mlegendgroup\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/plotly/basedatatypes.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, layout_plotly, frames, skip_invalid, **kwargs)\u001b[0m\n\u001b[1;32m    197\u001b[0m         self._layout_obj = self._layout_validator.validate_coerce(\n\u001b[1;32m    198\u001b[0m             layout, skip_invalid=skip_invalid)\n\u001b[0;32m--> 199\u001b[0;31m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    200\u001b[0m         \u001b[0;31m# ### Import clone of layout properties ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_layout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_layout_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_props\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/_plotly_utils/basevalidators.py\u001b[0m in \u001b[0;36mvalidate_coerce\u001b[0;34m(self, v, skip_invalid)\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/plotly/graph_objs/__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, arg, angularaxis, annotations, annotationdefaults, autosize, bargap, bargroupgap, barmode, barnorm, boxgap, boxgroupgap, boxmode, calendar, clickmode, coloraxis, colorscale, colorway, datarevision, direction, dragmode, editrevision, extendfunnelareacolors, extendpiecolors, extendsunburstcolors, extendtreemapcolors, font, funnelareacolorway, funnelgap, funnelgroupgap, funnelmode, geo, grid, height, hiddenlabels, hiddenlabelssrc, hidesources, hoverdistance, hoverlabel, hovermode, images, imagedefaults, legend, mapbox, margin, meta, metasrc, modebar, orientation, paper_bgcolor, piecolorway, plot_bgcolor, polar, radialaxis, scene, selectdirection, selectionrevision, separators, shapes, shapedefaults, showlegend, sliders, sliderdefaults, spikedistance, sunburstcolorway, template, ternary, title, titlefont, transition, treemapcolorway, uirevision, updatemenus, updatemenudefaults, violingap, violingroupgap, violinmode, waterfallgap, waterfallgroupgap, waterfallmode, width, xaxis, yaxis, **kwargs)\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'plotly.validators.layout' has no attribute 'ExtendtreemapcolorsValidator'"
+          ]
+        }
+      ]
     }
   ]
 }
